--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,46 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+    font-family: 'Gotham';
+    src: url('../components/fonts/GothamBook.otf');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+    font-family: 'Gotham';
+    src: url('../components/fonts/GothamBold.otf');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+:root {
+    --font-gotham: 'Gotham';
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font-gotham);
+}
+
+@layer utilities {
+    .text-balance {
+        text-wrap: balance;
+    }
+}
+
+@layer base {
+    * {
+        @apply border-foreground;
+    }
+    body {
+        @apply bg-foreground text-primary;
+    }
+}
+
+svg, #container{
+    height: 8%;
+    width: 8%;
 }
